[gd_scene load_steps=5 format=3 uid="uid://cnik0ucwcsosj"]

[ext_resource type="Script" path="res://image_element.gd" id="1_1ufl4"]
[ext_resource type="Material" uid="uid://i2puvnprtm23" path="res://materials/standard_mat.tres" id="1_obmkq"]
[ext_resource type="Texture2D" uid="uid://ca408v00w8i6m" path="res://tex/aseprite-viewer.svg" id="2_c4itk"]
[ext_resource type="Script" path="res://SpreadLabel.gd" id="3_4ty4u"]

[node name="ImageElement" type="Sprite3D"]
material_override = ExtResource("1_obmkq")
cast_shadow = 0
centered = false
double_sided = false
alpha_cut = 2
texture_filter = 0
texture = ExtResource("2_c4itk")
script = ExtResource("1_1ufl4")

[node name="VisibleOnLayerSpread" type="Node3D" parent="."]
script = ExtResource("3_4ty4u")

[node name="SpriteBorder" type="Sprite3D" parent="VisibleOnLayerSpread"]
sorting_offset = 0.02
centered = false
double_sided = false
texture_filter = 0

[node name="SpreadLabel" type="Label3D" parent="VisibleOnLayerSpread"]
layers = 3
sorting_offset = 1000.0
billboard = 1
double_sided = false
render_priority = 127
outline_render_priority = 126
text = "examplde"
horizontal_alignment = 0
vertical_alignment = 2
